# cmogstored

./: .ctags  .gitignore  AUTHORS  ChangeLog  GNUmakefile  HACKING  INSTALL  Makefile.am  Makefile.in  NEWS  README  Rakefile  TODO  accept.c  accept_loop.c  aclocal.m4  activeq.h  addrinfo.c  alloc.c  autogen.sh  bind_listen.c  canonpath.c  cfg.c  cfg.h  cfg_parser.c  cfg_parser.rl  cfg_validate.c  check.h  chunk_parser.c  chunk_parser.rl  cloexec_detect.c  cloexec_from.c  close.c  cmogstored.1  cmogstored.c  cmogstored.h  cmogstored.x  compat_accept.h  compat_epoll_pwait.h  compat_memstream.h  (+76 more)
bsd/: README  queue_safe.h  simpleq.h
build-aux/: .gitignore  coverage.mk  pgo.mk  release.mk  sparse.mk
debian/: README.Debian  README.source  changelog  cmogstored.default  cmogstored.manpages  control  copyright  docs  files  init.d  manpage.1.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch
doc/: design.txt  queues.txt
lib/: Makefile.am  Makefile.in
m4/: .gitignore  gnulib-cache.m4  gnulib-comp.m4
nostd/: README  setproctitle.c  setproctitle.h  setproctitle_noop.c
test/: .gitignore  cfg-parser-1.c  chunk-parser-1.c  cmogstored-cfg.rb  fdmap-1.c  gen-slow.sh  graceful_quit.rb  http-parser-1.c  http.rb  http_chunked_put.rb  http_dav.rb  http_getonly.rb  http_idle_expire.rb  http_put.rb  http_put_slow.rb  http_range.rb  inherit.rb  iostat-mock.rb  ioutil-1.c  mgmt-iostat.rb  mgmt-usage.rb  mgmt.rb  mogilefs_integration.perl  queue-idle-1.c  ruby.mk  slow.mk  test_helper.rb  thrpool-1.c  trywrite-1.c  upgrade.rb  valgrind.supp  valid-path-1.c
test/.graceful_quit/: http_get_huge_file.slowrb  http_trickle_get.slowrb  http_trickle_get_pipelined.slowrb  http_trickle_put.slowrb  iostat_watcher_shutdown.slowrb  mgmt_md5_huge_file.slowrb  mgmt_md5_huge_file_fsck_queued.slowrb  (+3 more)
tests/: .gitignore
(+64 files in other folders)
